# de-zoomcamp

./: .gitignore  compose.yaml  env.yaml  environment.yaml  pyproject.toml
01-docker-terraform/: homework.md  public_post.md
01-docker-terraform/01-docker-sql/: .gitignore  Dockerfile  ingest_data.py  notes.md  pipeline.py  pyproject.toml  upload-data.ipynb
01-docker-terraform/02-terraform-gcp/: main.tf  variables.tf
02-workflow-orchestration/: .gitignore
02-workflow-orchestration/mage-ai/: Dockerfile  compose.yaml  dev.env
02-workflow-orchestration/mage-ai/magic-zoomcamp/: .gitignore  io_config.yaml  metadata.yaml
02-workflow-orchestration/mage-ai/magic-zoomcamp/custom/: api_to_gcs.py  web_to_gcs.py
02-workflow-orchestration/mage-ai/magic-zoomcamp/data_exporters/: green_taxi_to_gcs.py  taxi_to_gcs_parameter.py  taxi_to_gcs_parquet.py  taxi_to_gcs_partitioned_parquet.py
02-workflow-orchestration/mage-ai/magic_zoomcamp/: io_config.yaml  metadata.yaml
02-workflow-orchestration/mage-zoomcamp/: compose.yaml
03-data-warehouse/: homework.sql
04-analytics-engineering/: bq_prep.sql  homework.sql
04-analytics-engineering/taxi_rides_ny/: dbt_project.yml
05-batch/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  05_taxi_schema_csv_to_pq.py  06_spark_sql.ipynb  07_groupby_join.ipynb  get_taxi_data.sh  homework.ipynb  schemas.py
container/kestra/: application.yaml
container/minio/: example.env  minio-bootstrap.sh
container/postgres/: init-kestra.sql  init-ny_taxi.sql
src/de_zoomcamp/: __init__.py
zz-workshop/01-dlt/: homework.ipynb
(+32 files in other folders)
