[project]
name = "de-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikki Satmaka", email = "30800020+NikkiSatmaka@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.10.15",
    "pendulum>=3.0.0",
    "polars>=1.25.0",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
lint = [
    "pyright>=1.1.396",
    "ruff>=0.11.0",
]
