[project]
name = "de-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikki Satmaka", email = "30800020+NikkiSatmaka@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cryptography>=44.0.2",
    "ipykernel>=6.29.5",
    "niquests>=3.14.0",
    "orjson>=3.10.16",
    "pendulum>=3.0.0",
    "polars[pandas]>=1.27.1",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
]
lint = ["pyright>=1.1.396", "ruff>=0.11.0"]

[tool.uv.workspace]
members = ["01-docker-terraform/01-docker-sql"]
